@@ -1,3 +1,8 @@
+2009-09-23  Kevin B. Kenny  <kennykb@acm.org>
+
+	* generic/tdbcpostgres.c: Removed an ugly workaround for a
+	                          bug in Tcl_SubstObj.
+	
 2009-09-19  Kevin B. Kenny  <kennykb@acm.org>
 
 	* configure (New file): autoconf 2.59
